# course-project-3

./: .gitignore  Fourier.py  Furier.py  NO BAD MODEL.keras  copy_dataset.py  cut_osc.py  description.py  main.py  my_model2_24_12_11_corrected_dataset_30epochs.keras  my_model_24_12_03_20_epochs.keras  nerual.py  nerual2.py  nerual3.py  osc_categ.py  osc_categ.spec  osc_categ2.spec  requirements.txt  seeOSC.py  setup_osc_categ.py  setup_seeOSC.py  test model.py  test_model.py  work_with_csv.py  work_with_osc.py
cpp/: CMakeLists.txt  prosto_file.cpp  Формат файла ald 6.0.cpp  Формат файла cfg 6.0.cpp  Формат файла lfg 6.0.cpp  Формат файла osc 6.0.cpp
cpp/cpp/: Aegis_osc.cpp  Classes_for_files.cpp  LocalPoint.cpp  file_ald.cpp  file_cfg.cpp  file_osc.cpp  logger.cpp  stdafx.cpp
cpp/gl/: .editorconfig
cpp/libraries/: Classes_for_files.h  Constants.h  Filecons.h  Hard_constants.h  LocalPoint.h  Mytypes.h  file_ald.h  file_cfg.h  file_osc.h  logger.h  stdafx.h
